--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h3, p {
     width: 40px;
     height: 40px;
 
-    background: url('../assets/trash-outline.svg');
+    background: url('assets/trash-outline.svg');
     background-size: contain;
     margin-left: 16px;
     cursor: pointer;
@@ -147,7 +147,7 @@ h3, p {
     width: 40px;
     height: 40px;
 
-    background: url('../assets/check-solid.svg');
+    background: url('assets/check-solid.svg');
     background-size: contain;
     margin-left: 16px;
     cursor: pointer;
