--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ h3, p {
     width: 40px;
     height: 40px;
 
-    background: url('../assets/check-outline.svg');
+    background: url('assets/check-outline.svg');
     background-size: contain;
     margin-left: 16px;
     cursor: pointer;
